--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 *{
     padding: 0;
     margin: 0;
+    font-family: outfit;
 }
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a.active hr{
+    display: block;
+}
